# gitlabify

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
docs/plans/: 2026-03-22-mr-approvals-comments-design.md  2026-03-22-mr-approvals-comments.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .env.example  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: auth.rs  constants.rs  gitlab.rs  inbox.rs  mod.rs  oauth.rs  settings.rs  tray.rs  tray_state.rs  utils.rs  window_controls.rs
src-tauri/src/modules/auth/: commands.rs  error.rs  mod.rs  model.rs  service.rs
src-tauri/src/modules/gitlab/: client.rs  error.rs  mod.rs  models.rs  parse.rs
src-tauri/src/modules/inbox/: cache.rs  commands.rs  error.rs  mod.rs  poller.rs  service.rs  state.rs
src-tauri/src/modules/oauth/: commands.rs  error.rs  mod.rs  pkce.rs  service.rs
src-tauri/src/modules/window_pin/: commands.rs  error.rs  mod.rs  service.rs  state.rs
src/features/: README.md
src/hooks/: useAuth.ts  useConnectionStatus.ts  useGitlabSettings.ts  useInbox.ts  useInboxNotifications.ts  useTheme.ts  (+1 more)
(+122 files in other folders)
