[package]
name = "gitlabify"
version = "0.1.0"
description = "GitLab Desktop Notification Center"
authors = ["Corentin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitlabify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.2.0"
tauri-plugin-keyring = "0.1.0"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.8"
reqwest = { version = "0.13.1", features = ["json", "form"] }
urlencoding = "2.1.3"
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.1"
image = "0.25.9"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2"
tracing = "0.1"
